--- a/src/template.html
+++ b/src/template.html
@@ -8,10 +8,8 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
         </nav>
     </header>
+    <div id="content"></div>
 </body>
 </html>
