Finished the basic design of the home menu

--- a/src/template.html
+++ b/src/template.html
@@ -11,5 +11,6 @@
         </nav>
     </header>
     <div id="content"></div>
+    <div class="credits" ><p>Made by <a target="_blank" href="https://github.com/alxxjandro">Alonso Alarcón</a>. Photo by <a target="_blank" href="https://unsplash.com/es/fotos/una-mesa-de-madera-cubierta-con-mucha-comida-OzZhNl39Bdc">Monika on Unsplash</a></p></div>
 </body>
 </html>
