--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Restaurant Name</title>
+    <title>Odin's Pasta Place</title>
 </head>
 <body>
     <header>
